--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
